force-app/main/default/objects/OrgSync_Consent_Staging__c/OrgSync_Consent_Staging__c.object-meta.xml
<CustomObject>
    <label>Consent Staging</label>
    <nameField>
        <displayFormat>Consent-{00000000}</displayFormat>
        <label>Consent Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>