force-app/main/default/objects/OrgSync_Consent_Staging__c/fields/OrgSync_Consent_Captured__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Consent_Captured__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Captured</label>
    <type>DateTime</type>
</CustomField>