force-app/main/default/objects/OrgSync_Consent_Staging__c/fields/OrgSync_Consent_Rescinded_By__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Consent_Rescinded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent Rescinded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consent_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>