force-app/main/default/objects/OrgSync_Consent_Staging__c/fields/OrgSync_Consent_Rescinded_Date_datetime__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Consent_Rescinded_Date_datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Rescinded Date (datetime)</label>
    <type>DateTime</type>
</CustomField>