force-app/main/default/objects/OrgSync_Consent_Staging__c/fields/OrgSync_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>