force-app/main/default/objects/OrgSync_Consent_Staging__c/fields/OrgSync_Omnipod_Discover_Enroll_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Omnipod_Discover_Enroll_Status__c</fullName>
    <label>Omnipod Discover Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>