force-app/main/default/objects/OrgSync_Consent_Staging__c/fields/OrgSync_Open_to_Group_Training__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Open_to_Group_Training__c</fullName>
    <label>Open to Group Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>