force-app/main/default/objects/OrgSync_Consent_Staging__c/fields/OrgSync_SMS_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_SMS_Consent_Status__c</fullName>
    <label>SMS Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
            <value>
                <fullName>Not Yet Consented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>