force-app/main/default/objects/OrgSync_Consent_Staging__c/fields/OrgSync_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Seen</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Linked</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Revoke Requested</fullName>
            </value>
            <value>
                <fullName>Error - Not Linked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>